# giql

./: .coveragerc  .gitignore  .readthedocs.yaml  CLAUDE.md  README.md  demo.ipynb  giql.md  pyproject.toml
.github/actions/build-release/: action.yaml
.github/actions/get-touched-files/: action.yaml
.github/actions/publish-github-release/: action.yaml
.github/actions/publish-pypi-release/: action.yaml
.github/scripts/: publish-distribution.sh
.github/workflows/: cut-release.yaml  publish-release.yaml  run-tests.yaml  sync-branches.yaml  validate-repo.yaml
.specify/memory/: constitution.md
.specify/specs/: distance-operator.md
benchmarks/: data.py  engines.py  operations.py  run.py  runner.py
benchmarks/experiments/bin_size/: analysis.py  routine.py  run.py
build-hooks/: _version.py
crates/giql-datafusion/: Cargo.toml
crates/giql-datafusion/src/: coitree.rs  cost.rs  lib.rs  logical_rule.rs  optimizer.rs  pattern.rs  pruning.rs
crates/giql-datafusion/src/exec/: bin_expand.rs  binned_join.rs  binned_sql.rs  mod.rs  sweep_line.rs
crates/giql-datafusion/src/stats/: metadata.rs  mod.rs  sampler.rs  types.rs
crates/giql-datafusion/tests/: integration_test.rs  logical_rule_test.rs
docs/: conf.py  examples.rst  index.rst  quickstart.rst
docs/dialect/: aggregation-operators.rst  distance-operators.rst  index.rst  quantifiers.rst  set-operators.rst  spatial-operators.rst  syntax-reference.rst
docs/guides/: engine.rst  index.rst  multi-backend.rst  performance.rst  quickstart.rst  schema-mapping.rst  transpilation.rst
docs/operators/: aggregation-operators.rst  distance-operators.rst  index.rst  quantifiers.rst  spatial-operators.rst
docs/recipes/: advanced-queries.rst  advanced.rst  bedtools-migration.rst  clustering-queries.rst  clustering.rst  coverage.rst  disjoin.rst  distance-queries.rst  distance.rst  index.rst  intersect-queries.rst  intersect.rst  rasterize.rst
docs/reference/: operator-matrix.rst  syntax-reference.rst
docs/transpilation/: api-reference.rst  execution.rst  extending.rst  index.rst  performance.rst  schema-mapping.rst
llms/: README.md
llms/skills/: commit.md  implement.md  issue.md  pr.md  test.md  understand-chat.md
scripts/: bench_datafusion.py
specs/001-distance-operator/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-nearest-operator/: data-model.md  lateral-research.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-nearest-operator/checklists/: requirements.md
specs/003-bedtools-integration-tests/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/giql/: __init__.py  canonical.py  canonicalizer.py  cli.py  constants.py  dialect.py  engine.py  expander.py  expressions.py  range_parser.py  resolver.py  schema.py  table.py  targets.py  transformer.py  transpile.py
src/giql/engines/: __init__.py  datafusion.py
tests/: conftest.py  test_binned_join.py  test_canonical.py  test_canonicalizer.py  test_cluster.py  test_cluster_parsing.py  test_cluster_predicate_transpilation.py  test_coverage.py  test_disjoin_parsing.py  test_disjoin_transpilation.py  test_disjoin_udf.py  test_distance_integration.py  test_distance_parsing.py  test_distance_transpilation.py  test_distance_udf.py  test_duckdb_iejoin.py  test_engine.py  test_expander.py  test_expressions.py  test_generator.py  test_integration.py  test_intersects_join.py  test_mcp_server.py  test_merge_parsing.py  test_nearest_edge_cases.py  test_nearest_integration.py  test_nearest_parsing.py  test_nearest_transpilation.py  test_package_api.py  test_parser.py  test_resolver.py  test_serialization.py  test_targets.py  test_transpile.py  test_usage_patterns.py  usage_patterns.py
tests/engines/: test_datafusion.py
tests/expanders/: test_cluster.py  test_genomic_columns.py  test_intersects.py  test_merge.py
tests/generators/: test_base.py
tests/integration/: _oracle.py  conftest.py  test_oracle_internals.py  test_oracle_lane.py
tests/manifests/: test_usage_patterns.TestDisjoinUsageMatrix.test_disjoin_pattern_executes_to_snapshot_across_profiles.yaml
tests/unit/: __init__.py  test_bedtools_wrapper.py  test_comparison.py  test_data_models.py  test_dialect.py  test_duckdb_loader.py  test_expressions.py  test_generators_base.py  test_table.py  test_transformer.py  test_transpile.py
(+62 files in other folders)
