[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
    { name = "Conrad Bzura", email = "conrad.bzura@umassmed.edu" }
]
dependencies = [
    "click>=8.3.0",
    "duckdb>=1.4.0",
    "oxbow>=0.4.0",
    "pandas>=2.0.0",
    "psycopg2-binary>=2.9.10",
    "sqlglot>=20.0.0",
    "sqlparse>=0.4.0",
]
description = "Genomic Interval Query Language - SQL dialect for genomic range queries"
name = "giql"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.0"

[project.scripts]
giql = "giql.cli:cli"

[project.optional-dependencies]
all = [
    "duckdb>=0.9.0",
    "mysql-connector-python>=8.0.0",
    "psycopg2-binary>=2.9.0",
]
dev = [
    "pytest-cov>=4.0.0",
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]
duckdb = ["duckdb>=0.9.0"]
mysql = ["mysql-connector-python>=8.0.0"]
postgres = ["psycopg2-binary>=2.9.0"]
sqlite = []

[tool.pytest.ini_options]
addopts = "--cov --cov-config=.coveragerc"

[tool.ruff]
line-length = 89

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
combine-as-imports = false
force-single-line = true
known-first-party = ["giql"]
