[build-system]
build-backend = "hatchling.build"
requires = [
    "debugpy",
    "hatchling",
    "packaging",
    "gitpython",
    "toml",
    "typing-extensions",
]

[project]
authors = [
    { name = "Nezar Abdennur", email = "nabdennur@gmail.com " },
    { name = "Conrad Bzura", email = "conradbzura@gmail.com" },
]
dependencies = [
    "sqlglot>=20.0.0",
]
description = "Genomic Interval Query Language - SQL dialect for genomic range queries"
dynamic = ["version"]
maintainers = [
    { name = "Nezar Abdennur", email = "nabdennur@gmail.com " },
    { name = "Conrad Bzura", email = "conradbzura@gmail.com" },
]
name = "giql"
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "duckdb>=1.4.0",
    "hypothesis>=6.0.0",
    "pandas>=2.0.0",
    "pybedtools>=0.9.0",
    "pytest-cov>=4.0.0",
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[tool.hatch.metadata.hooks.custom]
path = "build-hooks/metadata.py"

[tool.pytest.ini_options]
addopts = "--cov --cov-config=.coveragerc"

[tool.ruff]
line-length = 89

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
combine-as-imports = false
force-single-line = true
known-first-party = ["giql"]

[tool.pixi.workspace]
channels = ["conda-forge", "bioconda"]
platforms = ["osx-arm64", "osx-64", "linux-64"]

[tool.pixi.dependencies]
python = ">=3.11"
bedtools = ">=2.31.0"
pybedtools = ">=0.9.0"
pytest = ">=7.0.0"
pytest-cov = ">=4.0.0"
duckdb = ">=1.4.0"
pandas = ">=2.0.0"
sqlglot = ">=20.0.0"
pip = "*"
hypothesis = ">=6.148.2,<7"
